...
    android:paddingRight="16dp"
    android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/rggroup"
            android:layout_gravity="center_horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbclick"
                android:layout_weight="1"
                android:text="Fall" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbclick"
                android:layout_weight="1"
                android:text="Winter" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbclick"
                android:layout_weight="1"
                android:text="Spring" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbclick"
                android:layout_weight="1"
                android:text="Summer" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbclick"
                android:layout_weight="1"
                android:text="MultiSeason" />
        </RadioGroup>
</LinearLayout>
</FrameLayout>



...
